api-gemini-consumida-chat-concluido